force-app/main/default/objects/ATS_Integration_setup__c/ATS_Integration_setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>to store values for all setup parameters for ATS</description>
    <label>ATS Integration setup</label>
</CustomObject>