force-app/main/default/objects/ATS_Integration_setup__c/fields/Email_service_alias__c.field-meta.xml
<CustomField>
    <fullName>Email_service_alias__c</fullName>
    <label>Email service alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>