force-app/main/default/objects/ATS_Integration_setup__c/fields/Endpoint_for_ATS_call__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_for_ATS_call__c</fullName>
    <label>Endpoint for ATS call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>