force-app/main/default/objects/ATS_Integration_setup__c/fields/Endpoint_for_Token__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_for_Token__c</fullName>
    <label>Endpoint for Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>