force-app/main/default/objects/ATS_Integration_setup__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <label>Sandbox Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>