force-app/main/default/objects/ATS_Integration_setup__c/fields/Scope_for_token_call__c.field-meta.xml
<CustomField>
    <fullName>Scope_for_token_call__c</fullName>
    <label>Scope for token call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>